# swipl-rs

.github/workflows/: rust.yml
swipl/: Cargo.toml
swipl-fli/: Cargo.toml  build.rs
swipl-fli/src/: lib.rs
swipl-macros/src/: blob.rs  lib.rs  predicate.rs
swipl/src/: atom.rs  blob.rs  callable.rs  context.rs  dict.rs  engine.rs  functor.rs  init.rs  record.rs  stream.rs  text.rs
swipl/src/term/: mod.rs  ser.rs
