[package]
name = "swipl-fli"
version = "0.3.6"
authors = ["Matthijs van Otterdijk <matthijs@terminusdb.com>"]
edition = "2018"
links = "swipl"
license = "Apache-2.0/MIT"
description = "Low-level bindings to the SWI-Prolog Foreign Language Interface"
repository = "https://github.com/terminusdb-labs/swipl-rs/"
documentation = "https://terminusdb-labs.github.io/swipl-rs/swipl_fli/"

[features]
default = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(swipl10)"] }

[dependencies]
[build-dependencies]
bindgen = "0.69.4"
swipl-info = {path = "../swipl-info", version = "0.3.2"}
